--- a/template.yaml
+++ b/template.yaml
@@ -1,13 +1,14 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: 'This Template is incorrect, kindly correct it.'
+Description: 'This Template is corrected.'
 Parameters:
   amiId:
     Type: String
     Default: ami-04e5276ebb8451442
     Description: Choose an Ubuntu AMI
   keyPair:
-    Type: 'AWS::EC2::KeyPair::KeyName'
-    Description: Choose your Ubuntu AMI
+    Type: String
+    Default: ubuntu
+    Description: Choose your Ubuntu key pair
   dbMasterUserName:
     Type: String
     Default: admin
@@ -56,7 +57,7 @@ Resources:
     Type: 'AWS::EC2::Subnet'
     Properties:
       MapPublicIpOnLaunch: false
-      AvailabilityZone: us-east-1a
+      AvailabilityZone: us-east-1b
       CidrBlock: 192.168.0.32/28
       VpcId: !Ref vpc
       Tags:
@@ -68,16 +69,18 @@ Resources:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
       VpcId: !Ref vpc
-      GroupName: insatnceSecurityGroup
+      GroupName: instanceSecurityGroup
       GroupDescription: This will allow connection from anywhere
       SecurityGroupIngress:
-        CidrIp: 0.0.0.0/0
-        FromPort: '22'
-        ToPort: '22'
-        IpProtocol: tcp
+        - CidrIp: 0.0.0.0/0
+          FromPort: '22'
+          ToPort: '22'
+          IpProtocol: tcp
       SecurityGroupEgress:
-        CidrIp: 0.0.0.0/0
-        IpProtocol: -1
+        - CidrIp: !GetAtt privateSubnet1.CidrBlock
+          IpProtocol: -1
+        - CidrIp: !GetAtt privateSubnet2.CidrBlock
+          IpProtocol: -1
   rdsSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
@@ -85,13 +88,15 @@ Resources:
       GroupName: rdsSecurityGroup
       GroupDescription: This will allow connection from public subnet only
       SecurityGroupIngress:
-        CidrIp: 192.168.0.0/28
-        FromPort: '3306'
-        ToPort: '3306'
-        IpProtocol: tcp
+        - CidrIp: !GetAtt publicSubnet.CidrBlock
+          FromPort: '3306'
+          ToPort: '3306'
+          IpProtocol: tcp
       SecurityGroupEgress:
-        CidrIp: 0.0.0.0/0
-        IpProtocol: -1
+        - CidrIp: !GetAtt privateSubnet1.CidrBlock
+          IpProtocol: -1
+        - CidrIp: !GetAtt privateSubnet2.CidrBlock
+          IpProtocol: -1
   igw:
     Type: 'AWS::EC2::InternetGateway'
     Properties:
@@ -115,7 +120,7 @@ Resources:
       RouteTableId: !Ref publicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref igw
-  publicSubnetAssossciation:
+  publicSubnetAssociation:
     Type: 'AWS::EC2::SubnetRouteTableAssociation'
     Properties:
       RouteTableId: !Ref publicRouteTable
@@ -124,13 +129,12 @@ Resources:
     Type: 'AWS::EC2::Instance'
     Properties:
       NetworkInterfaces:
-        DeviceIndex: '0'
-        SubnetId: !Ref publicSubnet
-        GroupSet:
-          - !Ref instanceSecurityGroup
+        - DeviceIndex: '0'
+          SubnetId: !Ref publicSubnet
+          GroupSet:
+            - !Ref instanceSecurityGroup
       KeyName: !Ref keyPair
       ImageId: !Ref amiId
-      SecurityGroups: !Ref instanceSecurityGroup
       InstanceType: t2.micro
       Tags:
         - Key: Name
@@ -140,7 +144,7 @@ Resources:
   rdsSubnetGroup:
     Type: 'AWS::RDS::DBSubnetGroup'
     Properties:
-      DBSubnetGroupName: rdsSubnetGroup
+      DBSubnetGroupName: rdsSubnetGroupIntellipaat
       DBSubnetGroupDescription: It will contain subnet that rds should contain
       SubnetIds:
         - !Ref privateSubnet1
@@ -152,7 +156,7 @@ Resources:
       DBInstanceIdentifier: intellipaat
       MultiAZ: false
       Engine: MYSQL
-      DBInstanceClass: db.t2.micro
+      DBInstanceClass: db.t3.micro
       StorageType: gp2
       DBSubnetGroupName: !Ref rdsSubnetGroup
       VPCSecurityGroups:
